--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 OPENAI_API_KEY="sk-"
-NEO4J_URI="neo4j://"
+NEO4J_URI="neo4j://18.208.107.21:7687"
 NEO4J_USERNAME="neo4j"
-NEO4J_PASSWORD=""
+NEO4J_PASSWORD="growth-energizers-interviews"
